fix cart items alignment

--- a/client/src/components/cart/CartDealer/CartDealer.module.scss
+++ b/client/src/components/cart/CartDealer/CartDealer.module.scss
@@ -9,7 +9,7 @@
   border-bottom: 1px solid $border-gray;
   background-color: $bg-white;
   max-width: 1140px;
-  margin: 10px;
+  margin: 10px auto;
 }
 .dealerName {
   text-align: left;
